kubernetes/apps/iot/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 80
      targetPort: http
