kubernetes/apps/iot/home-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: iot
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - home-assistant.${SECRET_LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: home-assistant
          port: 80
